<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_Variables" Id="{4e0ea985-29d8-4132-9223-f15e8fa1fe3d}">
    <Declaration><![CDATA[VAR_GLOBAL

xSystemOverrideMode : BOOL; (* Global system override for the prototype section*)

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>